fix typo in section project

--- a/index.html
+++ b/index.html
@@ -560,21 +560,21 @@
                         <h5>Earthquake EDA Visualization</h5>
                         <ul>
                           <li>
-                            <span class="fw-bold">Description: </span>
+                            <span class="fw-bold">Description :</span>
                             Analyzed collection of data on major earthquakes
                             that have occurred worldwide over the past 123
                             years.
                           </li>
                           <li>
-                            <span class="fw-bold">skill </span> Data transforms,
+                            <span class="fw-bold">Skill :</span> Data transforms,
                             feature engineering, data visualization.
                           </li>
                           <li>
-                            <span class="fw-bold">Technology </span> Python,
+                            <span class="fw-bold">Technology :</span> Python,
                             Pandas, Numpy, Seaborn, Matplotlib, Plotly.
                           </li>
                           <li>
-                            <span class="fw-bold">Result: </span> Visualization
+                            <span class="fw-bold">Result :</span> Visualization
                             of earthquake's depth, magnitude, latitude and
                             longitude, to find which areas are prone to
                             earthquakes.
@@ -644,19 +644,19 @@
                         <h5>Top Tech Companies Stock Price Analysis</h5>
                         <ul>
                           <li>
-                            <span class="fw-bold">Description: </span> Analyzed
+                            <span class="fw-bold">Description :</span> Analyzed
                             Apple, Google, Microsoft and Amazon stocks data.
                           </li>
                           <li>
-                            <span class="fw-bold">skill </span> Data transforms,
+                            <span class="fw-bold">Skill :</span> Data transforms,
                             python coding, data visualization.
                           </li>
                           <li>
-                            <span class="fw-bold">Technology </span> Python,
+                            <span class="fw-bold">Technology :</span> Python,
                             Pandas, Numpy, Seaborn, Matplotlib.
                           </li>
                           <li>
-                            <span class="fw-bold">Result: </span> Closing price,
+                            <span class="fw-bold">Result :</span> Closing price,
                             volume of stocks being traded, daily price change,
                             monthly & yearly average of closing price,
                             correlation of closing price among the companies.
@@ -724,20 +724,20 @@
                         <h5>YouTube Sentiment Analysis</h5>
                         <ul>
                           <li>
-                            <span class="fw-bold">Description: </span> Analyzed
+                            <span class="fw-bold">Description :</span> Analyzed
                             text and detected positive and negative comments.
                           </li>
                           <li>
-                            <span class="fw-bold">skill </span> Data transforms,
+                            <span class="fw-bold">Skill :</span> Data transforms,
                             python coding, data visualization.
                           </li>
                           <li>
-                            <span class="fw-bold">Technology </span> Python,
+                            <span class="fw-bold">Technology :</span> Python,
                             Pandas, Numpy, Seaborn, Matplotlib, TextBlob, NLTK
                             Vader, WordCloud.
                           </li>
                           <li>
-                            <span class="fw-bold">Result: </span> New data
+                            <span class="fw-bold">Result :</span> New data
                             frames of each TextBlob and NLTK Vader sentiment
                             analysis, WordCloud of positive ad negative
                             comments, and emojis analysis.
@@ -805,19 +805,19 @@
                         <h5>YouTube Trending Statistics</h5>
                         <ul>
                           <li>
-                            <span class="fw-bold">Description: </span> Analyzed
+                            <span class="fw-bold">Description :</span> Analyzed
                             Apple, Google, Microsoft and Amazon stocks data.
                           </li>
                           <li>
-                            <span class="fw-bold">skill </span> Python coding,
+                            <span class="fw-bold">Skill :</span> Python coding,
                             data visualization.
                           </li>
                           <li>
-                            <span class="fw-bold">Technology </span> Python,
+                            <span class="fw-bold">Technology :</span> Python,
                             Pandas, Numpy, Seaborn, Matplotlib, Plotly.
                           </li>
                           <li>
-                            <span class="fw-bold">Result: </span> Relationship
+                            <span class="fw-bold">Result :</span> Relationship
                             between views and likes, visualization of trending
                             videos.
                           </li>
@@ -888,21 +888,21 @@
                         </h5>
                         <ul>
                           <li>
-                            <span class="fw-bold">Description: </span> Analyzed
+                            <span class="fw-bold">Description :</span> Analyzed
                             hotel bookings data and predict the cancellation of
                             the booking.
                           </li>
                           <li>
-                            <span class="fw-bold">skill </span> Data transforms,
+                            <span class="fw-bold">Skill :</span> Data transforms,
                             data cleaning, data visualization, feature encoding,
                             ML modeling.
                           </li>
                           <li>
-                            <span class="fw-bold">Technology </span> Python,
+                            <span class="fw-bold">Technology :</span> Python,
                             Pandas, Numpy, Seaborn, Matplotlib, SciKit-Learn.
                           </li>
                           <li>
-                            <span class="fw-bold">Result: </span> Spatial
+                            <span class="fw-bold">Result :</span> Spatial
                             analysis, fee of room per night, the most expensive
                             and busy month, correlation and univariate analysis.
                           </li>
@@ -972,21 +972,21 @@
                       <h5>Flight Price Prediction Using Random Forest Model</h5>
                       <ul>
                         <li>
-                          <span class="fw-bold">Description: </span> Analyzed
+                          <span class="fw-bold">Description :</span> Analyzed
                           variation of ticket price based on its classes,
                           departure and arrival time, source and destination.
                         </li>
                         <li>
-                          <span class="fw-bold">skill </span> Data transforms,
+                          <span class="fw-bold">Skill :</span> Data transforms,
                           feature encoding, data visualization, machine learning
                           modeling.
                         </li>
                         <li>
-                          <span class="fw-bold">Technology </span> Python,
+                          <span class="fw-bold">Technology :</span> Python,
                           Pandas, Numpy, Seaborn, Matplotlib, SciKit-Learn.
                         </li>
                         <li>
-                          <span class="fw-bold">Result: </span> Variety of
+                          <span class="fw-bold">Result :</span> Variety of
                           flight prices based on specific features, detected
                           outliers, Random Forest model’s r2_score: 0.87.
                         </li>
@@ -1052,18 +1052,18 @@
                         <h5>COVID-19 Data Analysiss</h5>
                         <ul>
                           <li>
-                            <span class="fw-bold">Description: </span> Analyzed
+                            <span class="fw-bold">Description :</span> Analyzed
                             COVID-19 Data in 2022.
                           </li>
                           <li>
-                            <span class="fw-bold">skill </span> Data analysis
+                            <span class="fw-bold">Skill :</span> Data analysis
                             and visualization.
                           </li>
                           <li>
-                            <span class="fw-bold">Technology </span> Tableau.
+                            <span class="fw-bold">Technology :</span> Tableau.
                           </li>
                           <li>
-                            <span class="fw-bold">Result: </span> Global numbers
+                            <span class="fw-bold">Result :</span> Global numbers
                             of Covid-19, percent population infected per
                             country, and total deaths per Continent.
                           </li>
